--- a/src/mafEventBus/CMakeLists.txt
+++ b/src/mafEventBus/CMakeLists.txt
@@ -16,6 +16,7 @@
 include(${MAF_SOURCE_DIR}/CMakeExternals/Find_qxmlrpc.cmake)
 include(${MAF_SOURCE_DIR}/CMakeExternals/Find_QtSOAP.cmake)
 include(${MAF_SOURCE_DIR}/CMakeExternals/Find_KDSoap.cmake)
+include(${MAF_SOURCE_DIR}/CMakeExternals/Find_WSF_CPP.cmake)
 
 ## #################################################################
 ## Init Project
@@ -42,7 +43,7 @@ mafMacroWrapTargetFiles()
  
 
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBS})
-LINK_DIRECTORIES(${qxmlrpc_LIBRARY_DIRS} ${KDSoap_LIBRARY_DIRS})
+LINK_DIRECTORIES(${qxmlrpc_LIBRARY_DIRS} ${KDSoap_LIBRARY_DIRS} ${WSF_CPP_LIBRARY_DIRS})
 
 ## #################################################################
 ## Wrapping Build rules
