--- a/test/mafPluginQtTest/CMakeLists.txt
+++ b/test/mafPluginQtTest/CMakeLists.txt
@@ -13,16 +13,12 @@
 ## Find the external packages.
 ## #################################################################
 
-include(${MAF_SOURCE_DIR}/CMakeExternals/Find_qxmlrpc.cmake)
-include(${MAF_SOURCE_DIR}/CMakeExternals/Find_QtSOAP.cmake)
-include(${MAF_SOURCE_DIR}/CMakeExternals/Find_OpenCV.cmake)
-
 ## #################################################################
 ## Init Project
 ## #################################################################
 
 mafMacroInitProject(0)
-
+add_definitions(-DQT_PLUGIN)
 ## #################################################################
 ## Build rules
 ## #################################################################
