--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,9 +34,9 @@ if(${MAF_QTGUI})
   ADD_SUBDIRECTORY(mafGUI)
 endif(${MAF_QTGUI})
 
-if(${BUILD_WRAP} AND ${MAF_SCRIPT_INTERPRETER})
-  ADD_SUBDIRECTORY(mafScriptInterpreter)
-endif(${BUILD_WRAP} AND ${MAF_SCRIPT_INTERPRETER})
+#if(${BUILD_WRAP} AND ${MAF_SCRIPT_INTERPRETER})
+#  ADD_SUBDIRECTORY(mafScriptInterpreter)
+#endif(${BUILD_WRAP} AND ${MAF_SCRIPT_INTERPRETER})
 
 if(${MAF_PLUGINCTK})
   #ADD_SUBDIRECTORY(mafPluginCTK)
