--- a/test/mafPluginTest/CMakeLists.txt
+++ b/test/mafPluginTest/CMakeLists.txt
@@ -23,11 +23,7 @@ mafMacroInitProject("plugin")
 ## Build rules
 ## #################################################################
 
-# Create the executable.
-ADD_LIBRARY(${PROJECT_NAME} SHARED ${PROJECT_SRCS})
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBS})
-
-SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SUFFIX ".mafplugin")
+mafMacroConfigureProject("plugin")
 
 ## #################################################################
 ## Installation
