--- a/UseMAF.cmake.in
+++ b/UseMAF.cmake.in
@@ -51,6 +51,7 @@ set(CMAKE_MODULE_PATH "${MAF_ROOT_DIR}/CMake")
 
 include(${CMAKE_MODULE_PATH}/mafCopySharedLibrariesInInstallDir.cmake)
 include(${CMAKE_MODULE_PATH}/mafMacroInitProject.cmake)
+include(${CMAKE_MODULE_PATH}/mafMacroConfigureProject.cmake)
 include(${CMAKE_MODULE_PATH}/mafMacroBuildProject.cmake)
 include(${CMAKE_MODULE_PATH}/mafMacroSetupQt.cmake)
 include(${CMAKE_MODULE_PATH}/mafMacroWrapTargetFiles.cmake)
