--- a/test/mafPluginQtTest/CMakeLists.txt
+++ b/test/mafPluginQtTest/CMakeLists.txt
@@ -18,16 +18,12 @@
 ## #################################################################
 
 mafMacroInitProject("plugin")
-add_definitions(-DQT_PLUGIN)
+
 ## #################################################################
 ## Build rules
 ## #################################################################
 
-# Create the executable.
-ADD_LIBRARY(${PROJECT_NAME} SHARED ${PROJECT_SRCS})
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBS})
-
-SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SUFFIX ".mafplugin")
+mafMacroConfigureProject("plugin")
 
 ## #################################################################
 ## Installation
